--- a/Javascript 기능구현/html 예제/index.html
+++ b/Javascript 기능구현/html 예제/index.html
@@ -41,9 +41,9 @@ a{ text-decoration:none; color:#333;}
           position: relative;}
 #main_img .imgs_area{position: relative; width: 100%; height:255px; overflow: hidden;}
 #main_img .imgs_area li{width:100%; height:255px; position:absolute; top:0; }
-#main_img .imgs_area li:nth-child(1){ background-color: red; left: 0%;}
-#main_img .imgs_area li:nth-child(2){ background-color: green; left: 100%;}
-#main_img .imgs_area li:nth-child(3){ background-color: blue; left: 200%;}
+#main_img .imgs_area li:nth-child(1){ background-color: red; left:0%;}
+#main_img .imgs_area li:nth-child(2){ background-color: green;  left:100%;}
+#main_img .imgs_area li:nth-child(3){ background-color: blue;  left:200%;}
 
 #main_img .btns{position: absolute; bottom:40px; left: 50%; margin-left:-32.5px ; z-index:9999;}
 #main_img .btns > li{float: left; width:15px; height: 15px;  margin-right: 10px;
@@ -71,10 +71,10 @@ a{ text-decoration:none; color:#333;}
                          position: relative; overflow: hidden;}
 #contents .con01 .in_box > ul{position: absolute; top:0; left: 0;}                        
 #contents .con01 .in_box li{width:360px; height: 100px; position: absolute; top:0;}
-#contents .con01 .in_box li:nth-child(1){ background-color:blueviolet; left:0px;}
-#contents .con01 .in_box li:nth-child(2){ background-color:burlywood; left:360px;}
-#contents .con01 .in_box li:nth-child(3){ background-color:cornflowerblue; left:720px;}
-#contents .con01 .in_box li:nth-child(4){ background-color:crimson;  left:1080px;}
+#contents .con01 .in_box li:nth-child(1){ background-color:blueviolet; }
+#contents .con01 .in_box li:nth-child(2){ background-color:burlywood;}
+#contents .con01 .in_box li:nth-child(3){ background-color:cornflowerblue;}
+#contents .con01 .in_box li:nth-child(4){ background-color:crimson;  }
 #contents .con01 .con01_btns{float: right; margin-top: 7px;}
 #contents .con01 .con01_btns > li{float: left; margin-right: 10px; 
                                   width: 15px; height: 15px;
@@ -87,7 +87,7 @@ a{ text-decoration:none; color:#333;}
 #contents .con02{ float:left; width:320px; height:130px; background-color:#033;}
 #contents .con03{ float:left; width:320px; height:130px; background-color:#00FFFF;}
 #contents .con04{ float:left; width:360px; height:120px; background-color:#00FF00;}
-#contents .con05{ float:left; width:640px; height:120px; background-color:#F09;}
+#contents .con05{ float:left; width:640px; height:120px; background-color:rgb(255, 142, 210);}
 
 #footer{margin:0 auto; width:1000px; height:105px; background-color:#339999;}
 #footer .logo{float:left; margin:35px 0 0 65px; width:120px; height:45px; background-color:#000000;}
@@ -102,9 +102,22 @@ a{ text-decoration:none; color:#333;}
 
 #q_mn a{font-size: 12px;}
 
+.fade >li{
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: 0.5} 
+  to {opacity: 1}
+}
+
 </style>
 <script src="js/jquery.js"></script>
 <script src="js/script.js"></script>
+<script src="js/vanilla.js"></script>
 </head>
 
 <body>
@@ -172,23 +185,23 @@ a{ text-decoration:none; color:#333;}
 
 <div id="main_img" class="box">
     <div class="imgs_area">
-     <ul class="imgs">
-        <li></li>
-        <li></li>
-        <li></li>
+     <ul class="imgs fade">
+        <li>메인이미지1</li>
+        <li>메인이미지2</li>
+        <li>메인이미지3</li>
      </ul>
     </div>   
     <ul class="btns">
-        <li><a href="#">a</a></li>
-        <li><a href="#">a</a></li>
-        <li><a href="#">a</a></li>
+        <li onclick = ""><a href="#">a</a></li>
+        <li onclick = ""><a href="#">a</a></li>
+        <li onclick = ""><a href="#">a</a></li>
     </ul>
   
     <!-- 블록레벨이라는 태그 영역, 박스 / 인라인레벨이 박스안에 있는 요소(이미지, 글자, 버튼) -->
 
 
-    <a href="#" class="l_btn">왼</a>
-    <a href="#" class="r_btn">오</a>
+    <a href="#" class="l_btn" onclick="">왼</a>
+    <a href="#" class="r_btn" onclick="">오</a>
 </div>
 
 <section id="contents" class="box">
@@ -201,11 +214,11 @@ a{ text-decoration:none; color:#333;}
             <li>04</li>
           </ul>
         </div>
-        <ul class="con01_btns">
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
+        <ul class="con01_btns " >
+            <li onclick="currentSlide(1)">1</li>
+            <li onclick="currentSlide(2)">2</li>
+            <li onclick="currentSlide(3)">3</li>
+            <li onclick="currentSlide(4)">4</li>
         </ul>
     </article>
     <article class="con02">con02</article>
