--- a/홈페이지 클론 실습/index.html
+++ b/홈페이지 클론 실습/index.html
@@ -1,67 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JK성형외과</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
+<meta charset=utf-8"/>
+<title>JK성형외과</title>
+<link rel="stylesheet" type="text/css" href="css/reset.css">
+<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-    <div id = "wrap">
-        <header id ="header" class="cons">
-            <div class="h_top">
-                <div class="logo"><img src="images/jk_logo.gif" alt="로고"></div>
-                <div class="mn_div">
-                    <ul class="info_mn"> 
-                        <li><a href="#">로그인</a></li>
-                        <li><a href="#">회원가입</a></li>
-                        <li><a href="#">오시는길</a></li>
-                    </ul>
-                    <ul class="q_mn">
-                        <li><a href="#">전후사진</a></li>
-                        <li><a href="#">수술후기</a></li>
-                        <li><a href="#">온라인상담</a></li>
-                        <li><a href="#">온라인예약</a></li>
-                        <li><a href="#">수술비용상담</a></li>
-                        <li><a href="#">JK뉴스</a></li>
-                    </ul>
-                </div>
-                <div class="lang"><img src="images/lan.jpg" alt="언어선택"></div>
-                <ul>
-                    <li></li>
-                </ul>
-            </div>
-            <nav class="main_nav">
-                <ul>
-                    <li><a href="#">JK소개</a></li>
-                    <li><a href="#"> 원스톱서비스</a></li>
-                    <li><a href="#"> 윤곽양악성형</a></li>
-                    <li><a href="#"> 안티에이징</a></li>
-                    <li><a href="#"> 원스톱서비스</a></li>
-                    <li><a href="#"> 원스톱서비스</a></li>
-                    <li><a href="#"> 원스톱서비스</a></li>
-                    <li><a href="#"> 원스톱서비스</a></li>
-                </ul>
-            </nav>
-            <div class="h_bottom"></div>
-        </header>
-        <section id ="main_img" class="cons"></section>
-        <section id ="contents" class="cons">
-            <div class="con_in"></div>
-        </section>
-        <footer id ="footer" class="cons">
-            <div class="f_top">
-                <div class="f_top_in"></div>
-            </div>
-            <div class="f_all_mn">
-                <div class ="f_all_mn_in">
-                    
-                </div>
-            </div>
-            <div class="f_copy"></div>
-        </footer>
-    </div>
+<div id="wrap">
+ <header id="header" class="cons">
+	 <div class="h_top">
+		<h1 class="logo"><img src="images/jk_logo.gif" alt=""></h1>
+		<ul class="info_mn">
+			<li><a href="#">로그인</a></li>
+			<li><a href="#">회원가입</a></li>
+			<li><a href="#">오시는길</a></li>
+		</ul>
+		<ul class="q_mn">
+			<li><a href="#">전후사진</a></li>
+			<li><a href="#">수술후기</a></li>
+			<li><a href="#">온라인상담</a></li>
+			<li><a href="#">온라인예약</a></li>
+			<li><a href="#">수술비용상담</a></li>
+			<li><a href="#">JK뉴스</a></li>
+		</ul>
+
+		<div class="lang"><img src="images/lan.jpg" alt="언어선택"></div>
+		<ul class="notice">
+			<li class="ttl">NOTICE</li>
+			<li class="txt">jk성형외과는 안전을 최우선으로 생각합니다</li>
+		</ul>
+	 </div>
+	 <nav class="main_nav">
+		 <ul>
+			<li><a href="#">JK소개</a></li>
+			<li><a href="#"> 원스톱서비스</a></li>
+			<li><a href="#"> 윤곽양악성형</a></li>
+			<li><a href="#"> 안티에이징</a></li>
+			<li><a href="#"> 원스톱서비스</a></li>
+			<li><a href="#"> 원스톱서비스</a></li>
+			<li><a href="#"> 원스톱서비스</a></li>
+			<li><a href="#"> 원스톱서비스</a></li>
+		 </ul>
+	 </nav>
+	 <div class="h_bottom"></div>
+ </header>
+
+ <section id="main_img" class="cons"></section>
+
+ <section id="contents"class="cons">
+	 <diV class="contents_in">
+		 <article class="about">
+			 <div>
+				 <h3>GLOBAL JK</h3>
+				 <h4>JK Vip Service</h4>
+				 <p>보건복지부 해외유치환자 등록 0001호
+					 	등록기관인 jk 성형외과는 고객을 최상의 서비스로
+						 모시기 위해서 항상 노력하고 있습니다.
+				 </p>
+			 </div>
+			 <img src="images/safe.jpg" alt="">
+			</article>
+		 <article class="event"><img src="images/bg_main_bnn2.jpg" alt=""></article>
+		<article class="movie"><img src="images/bg_main_bnn3.jpg" alt=""></article>
+		<!--con 2번째 줄-->
+		<article class="system">
+			<img src="images/bg_main_bnn4.jpg" alt="">
+			<img src="images/bg_main_bnn5.jpg" alt="">
+			<img src="images/bg_main_bnn6_1.jpg" alt="">
+		</article>
+		<article class="b_a_con">
+			<div></div>
+			<div></div>
+			<div></div>
+		</article>
+		<article class="history">
+			<img src="images/bg_main_bnn7.jpg" alt="">
+			<img src="images/bg_main_bnn8.jpg" alt="">
+		</article>
+		<!--con 3번째 줄-->
+		<article class="news">
+
+		</article>
+		<article class="desk"><img src="" alt=""></article>
+		<article class="location"><img src="" alt=""></article>
+	 </diV>
+ </section>
+
+ <footer id="footer"class="cons">
+	 <div class="f_top">
+		<div class="f_top_in"></div>
+	 </div>
+	 <div class="f_all_mn">
+		<div class="f_all_mn_in">
+	 </div>
+	 <div class="f_copy"></div>
+ </footer>
+</div>
+
 </body>
 </html>
