--- a/mapo sk/index.html
+++ b/mapo sk/index.html
@@ -13,99 +13,102 @@
 </head>
 <body>
     <header>
-        <div class="logo" onclick="location.href='https://www.naver.com'">naver</div>
-        <div class="g_nav">
-            <ul>
-                <li class="g_nav_menu">네이버
-                    <ul class="g_nav_drop_cont">
-                        <li><span>네이버 리스트</span>
-                            <ul class="gnb_dropMenu">
-                                <li><a class="gnb_dropMenu_item" href="intro.html">회사 소개</a></li>
-                                <li><a class="gnb_dropMenu_item" href="intro.html">회사 연혁</a></li>
-                                <li><a class="gnb_dropMenu_item" href="intro.html">수상 내역</a></li>
-                            </ul>
-                        </li>
-                        <li><span>네이버 리스트</span></li>
-                        <li><span>제휴 제안</span>
-                            <ul class="gnb_dropMenu">
-                                <li>
-                                    <a class="gnb_dropMenu_item" href="proposal.html">제휴제안 안내</a>
-                                </li>
-                                <li>
-                                    <a class="gnb_dropMenu_item" href="proposalRegister.html">제휴제안 등록</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li class="g_nav_menu">서비스
-                    <ul class="g_nav_drop_cont">
-                        <li>서비스 리스트</li>
-                        <li>서비스 리스트</li>
-                        <li>서비스 리스트</li>
-                        <li>서비스 리스트</li>
-                    </ul>
-                </li>
-                <li class="g_nav_menu">가치실현
-                    <ul class="g_nav_drop_cont">
-                        <li>가치실현 리스트</li>
-                        <li>가치실현 리스트</li>
-                        <li>가치실현 리스트</li>
-                        <li>가치실현 리스트</li>
-                    </ul>
-                </li>
-                <li class="g_nav_menu">홍보
-                    <ul class="g_nav_drop_cont">
-                        <li>
-                            <a href="promotion.html">
-                            TV홍보 페이지
-                            </a>
-                        </li>
-                        <li>홍보 리스트</li>
-                        <li>홍보 리스트</li>
-                        <li>홍보 리스트</li>
-                    </ul>
-                </li>
-                <li class="g_nav_menu">투자정보
-                    <ul class="g_nav_drop_cont">
-                        <li>기업지배구조 </li>
-                        <li>공시정보</li>
-                        <li>IR일정</li>
-                        <li>IR자료실
-                            <ul class="gnb_dropMenu">
-                                <li><a class="gnb_dropMenu_item" href="irevents.html">IR행사</a></li>
-                            </ul>
-                        </li>
-                        <li>결산 공고</li>
-                    </ul>
-                </li>
-                <li class="g_nav_menu">채용
-                    <ul class="g_nav_drop_cont">
-                        <li>채용 리스트
-                            <ul class="gnb_dropMenu">
-                                <li>
-                                    <a class="gnb_dropMenu_item" href="proposal.html">제휴제안 안내</a>
-                                </li>
-                                <li>
-                                    <a class="gnb_dropMenu_item" href="proposal.html">제휴제안 안내</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>채용 리스트</li>
-                        <li>채용 리스트</li>
-                        <li>채용 리스트</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="change_language">
-            <ul>
-                <li>kor</li>
-                <li>eng</li>
-            </ul>
-        </div>
-        <div class="menu_btn">
-            <i class="fas fa-bars"></i>
+        <div class="header_cont">
+            <div class="logo" onclick="location.href='https://www.naver.com'">naver</div>
+            <div class="gnb_menu">
+                <ul>
+                    <li class="gnb_menu_item">네이버
+                        <ul class="gnb_dropMenu_wrap">
+                            <li><span>네이버 리스트</span>
+                                <ul class="gnb_dropMenu">
+                                    <li><a class="gnb_dropMenu_item" href="intro.html">회사 소개</a></li>
+                                    <li><a class="gnb_dropMenu_item" href="intro.html">회사 연혁</a></li>
+                                    <li><a class="gnb_dropMenu_item" href="intro.html">수상 내역</a></li>
+                                </ul>
+                            </li>
+                            <li><span>네이버 리스트</span></li>
+                            <li><span>제휴 제안</span>
+                                <ul class="gnb_dropMenu">
+                                    <li>
+                                        <a class="gnb_dropMenu_item" href="proposal.html">제휴제안 안내</a>
+                                    </li>
+                                    <li>
+                                        <a class="gnb_dropMenu_item" href="proposalRegister.html">제휴제안 등록</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><span>CONTACT</span></li>
+                        </ul>
+                    </li>
+                    <li class="gnb_menu_item">서비스
+                        <ul class="gnb_dropMenu_wrap">
+                            <li>서비스 리스트</li>
+                            <li>서비스 리스트</li>
+                            <li>서비스 리스트</li>
+                            <li>서비스 리스트</li>
+                        </ul>
+                    </li>
+                    <li class="gnb_menu_item">가치실현
+                        <ul class="gnb_dropMenu_wrap">
+                            <li>가치실현 리스트</li>
+                            <li>가치실현 리스트</li>
+                            <li>가치실현 리스트</li>
+                            <li>가치실현 리스트</li>
+                        </ul>
+                    </li>
+                    <li class="gnb_menu_item">홍보
+                        <ul class="gnb_dropMenu_wrap">
+                            <li>
+                                <a href="promotion.html">
+                                TV홍보 페이지
+                                </a>
+                            </li>
+                            <li>홍보 리스트</li>
+                            <li>홍보 리스트</li>
+                            <li>홍보 리스트</li>
+                        </ul>
+                    </li>
+                    <li class="gnb_menu_item">투자정보
+                        <ul class="gnb_dropMenu_wrap">
+                            <li>기업지배구조 </li>
+                            <li>공시정보</li>
+                            <li>IR일정</li>
+                            <li>IR자료실
+                                <ul class="gnb_dropMenu">
+                                    <li><a class="gnb_dropMenu_item" href="irevents.html">IR행사</a></li>
+                                </ul>
+                            </li>
+                            <li>결산 공고</li>
+                        </ul>
+                    </li>
+                    <li class="gnb_menu_item">채용
+                        <ul class="gnb_dropMenu_wrap">
+                            <li>채용 리스트
+                                <ul class="gnb_dropMenu">
+                                    <li>
+                                        <a class="gnb_dropMenu_item" href="proposal.html">제휴제안 안내</a>
+                                    </li>
+                                    <li>
+                                        <a class="gnb_dropMenu_item" href="proposal.html">제휴제안 안내</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>채용 리스트</li>
+                            <li>채용 리스트</li>
+                            <li>채용 리스트</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="change_language">
+                <ul>
+                    <li>kor</li>
+                    <li>eng</li>
+                </ul>
+            </div>
+            <div class="menu_btn">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
     </header>
     <main>
