--- a/mapo sk/index.html
+++ b/mapo sk/index.html
@@ -26,7 +26,10 @@
                                     <li><a class="gnb_dropMenu_item" href="intro.html">수상 내역</a></li>
                                 </ul>
                             </li>
-                            <li><span>네이버 리스트</span></li>
+                            <li>
+                                <a href="affiliates.html">
+                                <span>주요 관계사</span></a>
+                            </li>
                             <li><span>제휴 제안</span>
                                 <ul class="gnb_dropMenu">
                                     <li>
