--- a/www.100min.co.kr/history/index.html
+++ b/www.100min.co.kr/history/index.html
@@ -754,7 +754,30 @@
 													data-widget_type="text-editor.default">
 													<div class="elementor-widget-container">
 														<div class="elementor-text-editor elementor-clearfix">
-															<p>2019년   8월      SK네트웍스 모빌리티뱅크 2기 선정<br />2019년   8월     
+															<p>
+																2021년 12월      마포사회적경제지원센터 커뮤니티케어플랫폼 개발<br/>
+																2021년 11월      북한이탈주민지원재단 일자리창출 사업 수행<br/>
+																2021년 10월      백의민족 곤지암클린센터 오픈<br/>
+																2021년   8월      서울시 돌봄SOS 협약 - 마포구, 강서구<br/>
+																2021년   6월      비대면스타트업육성사업 친환경분야 선정 (한국환경산업협회)<br/>
+																2021년   5월      전화출입명부 솔루션 개발<br/>
+																2021년   5월      비대면 협업시스템 개발<br/>
+																2021년   3월      서울시 사회적경제 돌봄거버넌스 구축 사업 참여<br/>
+																2021년   1월      청년 디지털 일자리 사업 선정 (벤처기업협회) <br/>
+																2020년 12월      마포구 사회적경제 협업 공간 입주 (연남동)<br/>
+																2020년 10월      마포구 주민기술학교 소독방역 사업단 교육 기획 및 운영 용역<br/>
+																2020년 10월      마포구 홈케어 서비스 공급 플랫폼 개발 용역<br/>
+																2020년   8월      코로나극복 사회적경제 전략사업개발 (서울사회적경제지원센터)<br/>
+																2020년   7월      그랜드코리아레저(GKL) IT 프로보노 - 정보보안<br/>
+																2020년   7월      보건복지부-서강대학교 라이프케어 서비스 실증모델 구현 용역<br/>
+																2020년   5월      보건복지부 커뮤니티케어 실증사업 홈케어 사업단 참여 (마포구)<br/>
+																2020년   3월      양천지역자활센터-백의민족 MOU<br/>
+																2019년   8월      마포사회적경제네트워크 참여<br/>
+																2019년 12월      '찾아가는세탁소' 시장 표창<br/>
+																2019년 12월      마포구 우리동네나눔반장 플랫폼 공급<br/>
+																2019년 10월      서울숲 Expo 참여<br/>
+																2019년   9월      부처형 예비사회적기업 지정 (보건복지부)<br/>
+																2019년   8월      SK네트웍스 모빌리티뱅크 2기 선정<br />2019년   8월     
 																한국중부발전 친환경 혁신 아이디어 공모전 선정<br />2019년   7월      서울시 마포구,
 																중구 돌봄 서비스 제공<br />2019년   6월      SH서울주택도시공사 도시재생 공모전
 																선정<br />2019년   6월      헬로네이처 세척서비스 공급 계약<br />2019년 
