--- a/www.100min.co.kr/contact.html
+++ b/www.100min.co.kr/contact.html
@@ -806,7 +806,7 @@
 																<input type="email" name="fields[507e08c]"
 																	id="form-field-507e08c" class="raven-field"
 																	placeholder="" data-type="email"
-																	required="required">
+																	required="required"/>
 															</div>
 															<div id="raven-field-group-e5d9ab6"
 																class="raven-flex-wrap raven-field-type-textarea raven-field-group elementor-column elementor-col-100 raven-field-required">
@@ -820,7 +820,7 @@
 															</div>
 															<div
 																class="raven-field-group raven-field-type-submit-button elementor-column elementor-col-100 justify">
-																<button type="submit" class="raven-submit-button">
+																<button type="submit" id="submit_btn" class="raven-submit-button">
 																	<i class="fa fa-check" aria-hidden="true"></i>
 																	백의민족에게 문의하기 </button>
 															</div>
@@ -1190,6 +1190,8 @@
 	<script type='text/javascript' src='js/wp-util.min4827.js?ver=5.2.14'></script>
 	<script type='text/javascript' src='js/frontend.min2fca.js?ver=1.4.0'></script>
 	<script type='text/javascript' src='js/flatpickr.mineda1.js?ver=4.1.4'></script>
+	<!-- [100min] Custom JS -->
+	<script type='text/javascript' src='js/contact.js'></script>
 </body>
 
 </html>
