--- a/www.100min.co.kr/history.html
+++ b/www.100min.co.kr/history.html
@@ -755,51 +755,264 @@
 													data-widget_type="text-editor.default">
 													<div class="elementor-widget-container">
 														<div class="elementor-text-editor elementor-clearfix">
-															<p>
-																2021년 12월      마포사회적경제지원센터 커뮤니티케어플랫폼 개발<br />
-																2021년 11월      북한이탈주민지원재단 일자리창출 사업 수행<br />
-																2021년 10월      백의민족 곤지암클린센터 오픈<br />
-																2021년   8월      서울시 돌봄SOS 협약 - 마포구, 강서구<br />
-																2021년   6월      비대면스타트업육성사업 친환경분야 선정 (한국환경산업협회)<br />
-																2021년   5월      전화출입명부 솔루션 개발<br />
-																2021년   5월      비대면 협업시스템 개발<br />
-																2021년   3월      서울시 사회적경제 돌봄거버넌스 구축 사업 참여<br />
-																2021년   1월      청년 디지털 일자리 사업 선정 (벤처기업협회) <br />
-																2020년 12월      마포구 사회적경제 협업 공간 입주 (연남동)<br />
-																2020년 10월      마포구 주민기술학교 소독방역 사업단 교육 기획 및 운영 용역<br />
-																2020년 10월      마포구 홈케어 서비스 공급 플랫폼 개발 용역<br />
-																2020년   8월      코로나극복 사회적경제 전략사업개발 (서울사회적경제지원센터)<br />
-																2020년   7월      그랜드코리아레저(GKL) IT 프로보노 - 정보보안<br />
-																2020년   7월      보건복지부-서강대학교 라이프케어 서비스 실증모델 구현 용역<br />
-																2020년   5월      보건복지부 커뮤니티케어 실증사업 홈케어 사업단 참여 (마포구)<br />
-																2020년   3월      양천지역자활센터-백의민족 MOU<br />
-																2019년   8월      마포사회적경제네트워크 참여<br />
-																2019년 12월      '찾아가는세탁소' 시장 표창<br />
-																2019년 12월      마포구 우리동네나눔반장 플랫폼 공급<br />
-																2019년 10월      서울숲 Expo 참여<br />
-																2019년   9월      부처형 예비사회적기업 지정 (보건복지부)<br />
-																2019년   8월      SK네트웍스 모빌리티뱅크 2기 선정<br />2019년   8월     
-																한국중부발전 친환경 혁신 아이디어 공모전 선정<br />2019년   7월      서울시 마포구,
-																중구 돌봄 서비스 제공<br />2019년   6월      SH서울주택도시공사 도시재생 공모전
-																선정<br />2019년   6월      헬로네이처 세척서비스 공급 계약<br />2019년 
-																 6월      온동네피엠씨 주거서비스 양해각서 체결<br />2019년   5월      서울시
-																일자리창출형 예비사회적기업 지정<br />2019년   1월      사회적기업진흥원 산하
-																소셜캠퍼스온서울(성수) 입주<br />2018년 12월      직영 셀프빨래방
-																런칭<br />2018년   9월      IP-PBX 기반 전화자동응답/발신 솔루션
-																런칭<br />2018년   3월      대림산업 이편한세상도화 서비스 런칭<br />2018년 
-																 1월      VR기반 서비스 안내 영상 런칭<br />2017년   8월      카카오톡 기반
-																백민챗봇 런칭<br />2017년   8월      IoT 기반 주문 솔루션
-																오픈<br />2017년   5월      백민페이 오픈<br />2017년   4월     
-																대림산업 주거서비스 사업 파트너 선정<br />2017년   2월      LG그룹 복지몰
-																입점<br />2017년   1월      기업부설연구소 설립<br />2016년   9월     
-																서강대학교 산학협력 프로그램 참여 (LINC)<br />2016년   8월      SKT T전화
-																기반 코디 인증 서비스 도입<br />2016년   8월      크라우드펀딩 103% 달성
-																(와디즈)<br />2016년   8월      창업진흥원 창업맞춤형 지원사업
-																선정<br />2016년   7월      안드로이드 앱 1만 다운로드 돌파<br />2016년 
-																 6월      서울산업진흥원 입주지원사업 선정<br />2016년   3월      벤처기업
-																인증<br />2015년 10월      서울 강서구 양천구 서비스 시작<br />2015년 
-																 8월      안드로이드/iOS 앱 출시<br />2015년   7월      SK행복재단 산하
-																사회적기업 세탁공장과 서비스 위탁 계약<br />2015년   5월      법인 설립</p>
+															<table>
+																<tr>
+																	<td>2021년</td>
+																	<td>12월</td>
+																	<td>마포사회적경제지원센터 커뮤니티케어플랫폼 개발</td>
+																</tr>
+																<tr>
+																	<td>2021년</td>
+																	<td>11월</td>
+																	<td>북한이탈주민지원재단 일자리창출 사업 수행</td>
+																</tr>
+																<tr>
+																	<td>2021년</td>
+																	<td>10월</td>
+																	<td>백의민족 곤지암클린센터 오픈</td>
+																</tr>
+																<tr>
+																	<td>2021년</td>
+																	<td>8월</td>
+																	<td>서울시 돌봄SOS 협약 - 마포구, 강서구</td>
+																</tr>
+																<tr>
+																	<td>2021년</td>
+																	<td>6월</td>
+																	<td>비대면스타트업육성사업 친환경분야 선정 (한국환경산업협회)</td>
+																</tr>
+																<tr>
+																	<td>2021년</td>
+																	<td>5월</td>
+																	<td>전화출입명부 솔루션 개발</td>
+																</tr>
+																<tr>
+																	<td>2021년</td>
+																	<td>5월</td>
+																	<td> 비대면 협업시스템 개발</td>
+																</tr>
+																<tr>
+																	<td>2021년</td>
+																	<td>3월</td>
+																	<td>서울시 사회적경제 돌봄거버넌스 구축 사업 참여</td>
+																</tr>
+																<tr>
+																	<td>2021년</td>
+																	<td>1월</td>
+																	<td>청년 디지털 일자리 사업 선정 (벤처기업협회) </td>
+																</tr>
+																<tr>
+																	<td>2020년</td>
+																	<td>12월</td>
+																	<td>마포구 사회적경제 협업 공간 입주 (연남동)</td>
+																</tr>
+																<tr>
+																	<td>2020년</td>
+																	<td>10월</td>
+																	<td>마포구 주민기술학교 소독방역 사업단 교육 기획 및 운영 용역</td>
+																</tr>
+																<tr>
+																	<td>2020년</td>
+																	<td>10월</td>
+																	<td>마포구 홈케어 서비스 공급 플랫폼 개발 용역</td>
+																</tr>
+																<tr>
+																	<td>2020년</td>
+																	<td>8월</td>
+																	<td>코로나극복 사회적경제 전략사업개발 (서울사회적경제지원센터)</td>
+																</tr>
+																<tr>
+																	<td>2020년</td>
+																	<td>7월</td>
+																	<td>그랜드코리아레저(GKL) IT 프로보노 - 정보보안</td>
+																</tr>
+																<tr>
+																	<td>2020년</td>
+																	<td>7월</td>
+																	<td>보건복지부-서강대학교 라이프케어 서비스 실증모델 구현 용역</td>
+																</tr>
+																<tr>
+																	<td>2020년</td>
+																	<td>5월</td>
+																	<td>보건복지부 커뮤니티케어 실증사업 홈케어 사업단 참여 (마포구)</td>
+																</tr>
+																<tr>
+																	<td>2020년</td>
+																	<td>3월</td>
+																	<td>양천지역자활센터-백의민족 MOU</td>
+																</tr>
+																<tr>
+																	<td>2020년</td>
+																	<td>2월</td>
+																	<td>마포사회적경제네트워크 참여</td>
+																</tr>
+																<tr>
+																	<td>2019년</td>
+																	<td>12월</td>
+																	<td>'찾아가는세탁소' 시장 표창</td>
+																</tr>
+																<tr>
+																	<td>2019년</td>
+																	<td>12월</td>
+																	<td>마포구 우리동네나눔반장 플랫폼 공급</td>
+																</tr>
+																<tr>
+																	<td>2019년</td>
+																	<td>10월</td>
+																	<td>서울숲 Expo 참여</td>
+																</tr>
+																<tr>
+																	<td>2019년</td>
+																	<td>9월</td>
+																	<td>부처형 예비사회적기업 지정 (보건복지부)</td>
+																</tr>
+																<tr>
+																	<td>2019년</td>
+																	<td>8월</td>
+																	<td>SK네트웍스 모빌리티뱅크 2기 선정</td>
+																</tr>
+																<tr>
+																	<td>2019년</td>
+																	<td>8월</td>
+																	<td>한국중부발전 친환경 혁신 아이디어 공모전 선정</td>
+																</tr>
+																<tr>
+																	<td>2019년</td>
+																	<td>7월</td>
+																	<td>서울시 마포구, 중구 돌봄 서비스 제공</td>
+																</tr>
+																<tr>
+																	<td>2019년</td>
+																	<td>6월</td>
+																	<td>SH서울주택도시공사 도시재생 공모전 선정</td>
+																</tr>
+																<tr>
+																	<td>2019년</td>
+																	<td>6월</td>
+																	<td>헬로네이처 세척서비스 공급 계약</td>
+																</tr>
+																<tr>
+																	<td>2019년</td>
+																	<td>6월</td>
+																	<td>온동네피엠씨 주거서비스 양해각서 체결</td>
+																</tr>
+																<tr>
+																	<td>2019년</td>
+																	<td>5월</td>
+																	<td>서울시 일자리창출형 예비사회적기업 지정</td>
+																</tr>
+																<tr>
+																	<td>2019년</td>
+																	<td>1월</td>
+																	<td>사회적기업진흥원 산하 소셜캠퍼스온서울(성수) 입주</td>
+																</tr>
+																<tr>
+																	<td>2018년</td>
+																	<td>12월</td>
+																	<td>직영 셀프빨래방 런칭</td>
+																</tr>
+																<tr>
+																	<td>2018년</td>
+																	<td>9월</td>
+																	<td>IP-PBX 기반 전화자동응답/발신 솔루션 런칭
+																	</td>
+																</tr>
+																<tr>
+																	<td>2018년</td>
+																	<td>3월</td>
+																	<td>대림산업 이편한세상도화 서비스 런칭</td>
+																</tr>
+																<tr>
+																	<td>2018년</td>
+																	<td>1월</td>
+																	<td>VR기반 서비스 안내 영상 런칭</td>
+																</tr>
+																<tr>
+																	<td>2017년</td>
+																	<td>8월</td>
+																	<td>카카오톡 기반 백민챗봇 런칭</td>
+																</tr>
+																<tr>
+																	<td>2017년</td>
+																	<td>8월</td>
+																	<td>IoT 기반 주문 솔루션 오픈</td>
+																</tr>
+																<tr>
+																	<td>2017년</td>
+																	<td>5월</td>
+																	<td>백민페이 오픈</td>
+																</tr>
+																<tr>
+																	<td>2017년</td>
+																	<td>4월</td>
+																	<td>대림산업 주거서비스 사업 파트너 선정</td>
+																</tr>
+																<tr>
+																	<td>2017년</td>
+																	<td>2월</td>
+																	<td>LG그룹 복지몰 입점</td>
+																</tr>
+																<tr>
+																	<td>2017년</td>
+																	<td>1월</td>
+																	<td>기업부설연구소 설립</td>
+																</tr>
+																<tr>
+																	<td>2016년</td>
+																	<td>9월</td>
+																	<td>서강대학교 산학협력 프로그램 참여 (LINC)</td>
+																</tr>
+																<tr>
+																	<td>2016년</td>
+																	<td>8월</td>
+																	<td>SKT T전화 기반 코디 인증 서비스 도입</td>
+																</tr>
+																<tr>
+																	<td>2016년</td>
+																	<td>8월</td>
+																	<td>크라우드펀딩 103% 달성 (와디즈)</td>
+																</tr>
+																<tr>
+																	<td>2016년</td>
+																	<td>8월</td>
+																	<td>창업진흥원 창업맞춤형 지원사업 선정</td>
+																</tr>
+																<tr>
+																	<td>2016년</td>
+																	<td>7월</td>
+																	<td>안드로이드 앱 1만 다운로드 돌파</td>
+																</tr>
+																<tr>
+																	<td>2016년</td>
+																	<td>6월</td>
+																	<td>서울산업진흥원 입주지원사업 선정</td>
+																</tr>
+																<tr>
+																	<td>2016년</td>
+																	<td>3월</td>
+																	<td>벤처기업 인증</td>
+																</tr>
+																<tr>
+																	<td>2015년</td>
+																	<td>10월</td>
+																	<td>서울 강서구 양천구 서비스 시작</td>
+																</tr>
+																<tr>
+																	<td>2015년</td>
+																	<td>8월</td>
+																	<td>안드로이드/iOS 앱 출시</td>
+																</tr>
+																<tr>
+																	<td>2015년</td>
+																	<td>7월</td>
+																	<td>SK행복재단 산하 사회적기업 세탁공장과 서비스 위탁 계약</td>
+																</tr>
+																<tr>
+																	<td>2015년</td>
+																	<td>3월</td>
+																	<td>법인 설립</td>
+																</tr>
+															</table>
 														</div>
 													</div>
 												</div>
@@ -1162,6 +1375,7 @@
 	<script type='text/javascript' src='js/position.mine899.js?ver=1.11.4'></script>
 	<script type='text/javascript' src='js/dialog.minfe9d.js?ver=4.7.3'></script>
 	<script type='text/javascript' src='js/waypoints.min05da.js?ver=4.0.2'></script>
+	<!-- [100min] 스와이퍼 플러그인 (swiper) -->
 	<script type='text/javascript' src='js/swiper.min4f24.js?ver=4.4.6'></script>
 	<script type='text/javascript'>
 		var elementorFrontendConfig = { "environmentMode": { "edit": false, "wpPreview": false }, "is_rtl": false, "breakpoints": { "xs": 0, "sm": 480, "md": 768, "lg": 1025, "xl": 1440, "xxl": 1600 }, "version": "2.6.8", "urls": { "assets": "https:\/\/www.100min.co.kr\/wp-content\/plugins\/elementor\/assets\/" }, "settings": { "page": [], "general": { "elementor_global_image_lightbox": "yes", "elementor_enable_lightbox_in_editor": "yes" } }, "post": { "id": 186, "title": "\uc5f0\ud601", "excerpt": "" } };
