--- a/www.100min.co.kr/world.html
+++ b/www.100min.co.kr/world.html
@@ -1854,7 +1854,7 @@
 	<script type='text/javascript' src='js/wp-util.min4827.js?ver=5.2.14'></script>
 	<script type='text/javascript' src='js/frontend.min2fca.js?ver=1.4.0'></script>
 	<script type='text/javascript' src='js/flatpickr.mineda1.js?ver=4.1.4'></script>
-	<!-- [100min] 차트 기능 -->
+	<!-- [100min] 차트 -->
 	<script type='text/javascript' src="js/chart.js"></script>
 </body>
 </html>
