--- a/www.100min.co.kr/contact.html
+++ b/www.100min.co.kr/contact.html
@@ -28,19 +28,19 @@
 			padding: 0 !important;
 		}
 	</style>
-	<link rel='stylesheet' id='wp-block-library-css' href='css/style.min4827.css?ver=5.2.14' type='text/css'
+    <link rel='stylesheet' id='wp-block-library-css' href='css/style.min4827.css?ver=5.2.14' type='text/css'
 		media='all' />
-	<link rel='stylesheet' id='wp-block-library-theme-css' href='css/theme.min4827.css?ver=5.2.14' type='text/css'
+    <link rel='stylesheet' id='wp-block-library-theme-css' href='css/theme.min4827.css?ver=5.2.14' type='text/css'
 		media='all' />
 
 	<!-- [wp plugins] -->
 	<link rel='stylesheet' id='jupiterx-css' href='css/jupiterx.css?ver=1.7.0' type='text/css' media='all' />
-	<link rel='stylesheet' id='jet-elements-css' href='css/jet-elementsdb21.css?ver=1.15.12' type='text/css'
-		media='all' />
-	<link rel='stylesheet' id='jet-elements-skin-css' href='css/jet-elements-skindb21.css?ver=1.15.12' type='text/css'
-		media='all' />
-	<link rel='stylesheet' id='elementor-icons-css' href='css/elementor-icons.min9a8d.css?ver=5.3.0' type='text/css'
-		media='all' />
+	<!--<link rel='stylesheet' id='jet-elements-css' href='css/jet-elementsdb21.css?ver=1.15.12' type='text/css'
+		media='all' />-->
+	<!--<link rel='stylesheet' id='jet-elements-skin-css' href='css/jet-elements-skindb21.css?ver=1.15.12' type='text/css'
+		media='all' />-->
+	<!--<link rel='stylesheet' id='elementor-icons-css' href='css/elementor-icons.min9a8d.css?ver=5.3.0' type='text/css'
+		media='all' />-->
 	<link rel='stylesheet' id='elementor-animations-css' href='css/animations.min91ac.css?ver=2.6.8' type='text/css'
 		media='all' />
 	<link rel='stylesheet' id='elementor-frontend-css' href='css/frontend.min91ac.css?ver=2.6.8' type='text/css'
